--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1113,8 +1113,8 @@
     <!--region 20220714 新版投注單-->
     <string name="bet_win">Win</string>
     <string name="bet_stake">Stake</string>
-    <string name="total_capital">Total Stake：%s</string>
-    <string name="total_win_amount">EST Winning：</string>
+    <string name="total_capital">Stake：%s</string>
+    <string name="total_win_amount">Win：</string>
     <string name="delete_bet">Delete</string>
     <string name="delete_bet_all">Delete All</string>
     <string name="btn_login_bet">Log in before betting</string>
