--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1100,8 +1100,8 @@
     <!--region 20220714 新版投注單-->
     <string name="bet_win">Thắng</string>
     <string name="bet_stake">Cược</string>
-    <string name="total_capital">Thắng：%s</string> <!--F008-->
-    <string name="total_win_amount">Cược：</string> <!--F005-->
+    <string name="total_capital">Tiền cược：%s</string> <!--F008-->
+    <string name="total_win_amount">Thắng：</string> <!--F005-->
     <string name="delete_bet">Xóa bỏ</string>
     <string name="delete_bet_all">Xóa tất cả</string>
     <string name="btn_login_bet">Đăng nhập để đặt cược</string>
