--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1405,4 +1405,8 @@
     <string name="str_bet_way">投注方式</string>
     <string name="str_in_play_bet_confirmed">滚球注单确认中</string>
     <string name="str_odds_description">赔率说明</string>
+    <string name="draw_time">抽奖时间</string>
+    <string name="closing_time">"抽奖关闭时间 "</string>
+    <string name="end_time">活动结束时间</string>
+    <string name="draw_countdown">抽奖倒计时</string>
 </resources>
