--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,7 @@
     <string name="city">City</string>
     <string name="hint_city">Please enter city</string>
     <string name="we_chat">Wechat</string>
-    <string name="identity">Verification Status</string>
+    <string name="identity">ID Verification</string>
     <string name="hint_we_chat_number">Wechat ID</string>
     <string name="zalo">Zalo</string>
     <string name="hint_zalo">Zalo Account</string>
@@ -924,7 +924,7 @@
     <string name="live_chat">Live Chat</string>
     <string name="contact">Contact Us</string>
     <string name="btm_navigation_hint">%s is a Registered Trade Mark, brand and registered business name.</string>
-    <string name="btm_navigation_copyright">Copyright © 2022 %1$s ALL RIGHTS RESERVED</string>
+    <string name="btm_navigation_copyright">Copyright © 2023 %1$s ALL RIGHTS RESERVED</string>
     <string name="e_address">Address</string>
     <string name="online_paypal">Paypal</string>
     <string name="online_gragon_pay">DragonPay</string>
