--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1535,5 +1535,6 @@
     <string name="LT050_1">Support</string>
     <string name="A002">Mangyaring kumpirmahin na ikaw ay higit sa 21 taong gulang upang makapasok sa website na ito</string>
     <string name="ageVerify">Pag-verify ng Edad</string>
+    <string name="P286">Mga anunsyo</string>
 </resources>
 
