--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1563,4 +1563,5 @@
     <string name="LT050_1">CSKH</string>
     <string name="A002">Vui lòng xác minh bạn đủ 21 tuổi để truy cập trang web này</string>
     <string name="ageVerify">Xác Minh Độ Tuổi</string>
+    <string name="P286">Thông báo</string>
 </resources>
