--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1690,4 +1690,5 @@
     <string name="LT050_1">Support</string>
     <string name="A002">Please verify that you are 21 years of ages or older to enter this site</string>
     <string name="ageVerify">Age Verification</string>
+    <string name="P286">Announcements</string>
 </resources>
