修改末位比分相关样式

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1539,5 +1539,6 @@
     <string name="N809">Lalaki</string>
     <string name="N810">Babae</string>
     <string name="P286">Mga anunsyo</string>
+    <string name="P287">Tingnan ang Lahat ng Market</string>
 </resources>
 
