--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1568,4 +1568,5 @@
     <string name="N809">Nam</string>
     <string name="N810">Nữ</string>
     <string name="P286">Thông báo</string>
+    <string name="P287">Xem tất cả thị trường</string>
 </resources>
