--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1623,4 +1623,5 @@
     <string name="N809">男</string>
     <string name="N810">女</string>
     <string name="P286">公告</string>
+    <string name="P287">查看所有盘口</string>
 </resources>
