--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1696,4 +1696,5 @@
     <string name="N809">Male</string>
     <string name="N810">Female</string>
     <string name="P286">Announcements</string>
+    <string name="P287">View All Markets</string>
 </resources>
