--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1624,4 +1624,6 @@
     <string name="N810">女</string>
     <string name="P286">公告</string>
     <string name="P287">查看所有盘口</string>
+    <string name="P289">我确认详细是正确的。</string>
+    <string name="P288">已确认的交易将不予退款。 请保证收款银行/电子钱包信息正确。</string>
 </resources>
