--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1697,4 +1697,27 @@
     <string name="N810">Female</string>
     <string name="P286">Announcements</string>
     <string name="P287">View All Markets</string>
+    <string name="P293">Ending card game</string>
+    <string name="P294">Select the league you want to find and the game time</string>
+    <string name="P295">Next step</string>
+    <string name="P296">Select the game you need and click to view the card</string>
+    <string name="P297">Previous step</string>
+    <string name="P298">Select the score you want to purchase</string>
+    <string name="P299">Check the instructions, click to place a bet, or choose other scores to place bets together.</string>
+    <string name="P300">Click to change cards with other amounts</string>
+    <string name="P301">Complete</string>
+    <string name="P302">Basketball Card Game</string>
+    <string name="P303">View cards</string>
+    <string name="P304">Card Game</string>
+    <string name="P305">Card Details</string>
+    <string name="P306">You will bet the %s into the %s score options. Each score option will take effect when the first quarter, second quarter, third quarter, and full-time scores are drawn. There are four chances to win, and the bonus Can be stacked, and you can get up to %s rewards.</string>
+    <string name="P307">Your name:</string>
+    <string name="P308">Default is user nickname</string>
+    <string name="P309">* I hereby agree and understand that after clicking the \"Confirm\" button, the bets placed within the system shall be non-refundable. Winnings are subject to government mandated taxes.</string>
+    <string name="P310">Add more scores</string>
+    <string name="P311">Game Results</string>
+    <string name="P312">Quarter</string>
+    <string name="P313">Result</string>
+    <string name="P314">Winning amount</string>
+    <string name="P315">Total refund amount</string>
 </resources>
