--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1665,4 +1665,7 @@
     <string name="H018">总投注额</string>
     <string name="H020">总赢/输</string>
     <string name="J223">活动</string>
+    <string name="P324">继续投注</string>
+    <string name="P333">末位比分</string>
+    <string name="LT042">投注金额</string>
 </resources>
