endcard fix bugs

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1559,7 +1559,7 @@
     <string name="P307">Pangalan:</string>
     <string name="P308">Default ay nickname ng user</string>
     <string name="P309">* Ako dito ay sumasang-ayon at nauunawaan na pagkatapos ng pag-click sa \"Kumpirmahin\" na buton, ang mga taya na inilagay sa loob ng system ay hindi na ma-refund. Ang mga panalo ay napapailalim sa mga buwis na ipinag-uutos ng gobyerno.</string>
-    <string name="P310">Magdagdag pa ng puntos</string>
+    <string name="P310">Add more scores</string>
     <string name="P311">Resulta ng Laro</string>
     <string name="P312">Quarter</string>
     <string name="P313">Resulta</string>
