--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1584,5 +1584,6 @@
     <string name="P324">Ituloy ang pagtaya</string>
     <string name="P333">End Kard</string>
     <string name="LT042">Halaga ng taya</string>
+    <string name="KYC055">Pahiwatig</string>
 </resources>
 
