--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1613,4 +1613,5 @@
     <string name="P324">Tiếp tục cược</string>
     <string name="P333">End Card</string>
     <string name="LT042">Tiền cược</string>
+    <string name="KYC055">Mẹo</string>
 </resources>
