--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1668,4 +1668,5 @@
     <string name="P324">继续投注</string>
     <string name="P333">末位比分</string>
     <string name="LT042">投注金额</string>
+    <string name="KYC055">提示</string>
 </resources>
