--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1741,4 +1741,5 @@
     <string name="P324">Keep betting</string>
     <string name="P333">End Card</string>
     <string name="LT042">Stake</string>
+    <string name="KYC055">Tips</string>
 </resources>
