越南文翻译过长改成英文显示

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1588,7 +1588,7 @@
     <string name="P307">Tên của bạn:</string>
     <string name="P308">Mặc định là biệt danh người dùng</string>
     <string name="P309">* Tôi đồng ý và hiểu rằng sau khi nhấp vào nút \"Xác nhận\", các cược đã đặt trong hệ thống sẽ không được hoàn trả. Tiền thắng cược phải chịu thuế do chính phủ quy định.</string>
-    <string name="P310">Thêm nhiều tỷ số hơn</string>
+    <string name="P310">Add more scores</string>
     <string name="P311">Kết quả thi đấu</string>
     <string name="P312">Set</string>
     <string name="P313">Kết quả</string>
