修改提示文案

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1585,5 +1585,6 @@
     <string name="P333">End Kard</string>
     <string name="LT042">Halaga ng taya</string>
     <string name="KYC055">Pahiwatig</string>
+    <string name="P337">[Nagsimula na ang laro, walang pwedeng tumaya]</string>
 </resources>
 
