--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1614,4 +1614,5 @@
     <string name="P333">End Card</string>
     <string name="LT042">Tiền cược</string>
     <string name="KYC055">Mẹo</string>
+    <string name="P337">Đã bắt đầu trận, không thể đặt cược</string>
 </resources>
