--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1742,4 +1742,5 @@
     <string name="P333">End Card</string>
     <string name="LT042">Stake</string>
     <string name="KYC055">Tips</string>
+    <string name="P337">[The game has started, no bets can be made]</string>
 </resources>
