--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1669,5 +1669,5 @@
     <string name="P333">末位比分</string>
     <string name="LT042">投注金额</string>
     <string name="KYC055">提示</string>
-    <string name="P337">【已开赛，无法投注】</string>
+    <string name="P337">已开赛，无法投注</string>
 </resources>
